# ResourceBlockerAndroid

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JNIResourceBlocker.cpp  ResourceBlocker.cpp  ResourceBlocker.h
app/src/main/java/org/mozilla/ResourceBlockerAndroid/: HomeFragment.kt  JNIResourceBlocker.kt  MainActivity.kt
app/src/main/res/layout/: home_fragment.xml  navigation_activity.xml
app/src/main/res/layout-w960dp/: navigation_activity.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
